examples/pod-busybox-pvclaim.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pvc
  labels:
    role: client
spec:
  containers:
  - name: busybox-pvc
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do echo Success! > /output/success.txt; sleep 5; done']
    volumeMounts: 
    - name: pv-storage 
      mountPath: /output 
  volumes: 
  - name: pv-storage 
    persistentVolumeClaim: 
      claimName: host-pvc
