examples/pod-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    role: client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 3600; done']
